# trading-spark-assignment

./: .gitignore  README.md  makefile  pyproject.toml
src/: data.py  fill.py  main.py  pivot.py
src/app/: data.py  fill.py  main.py  pivot.py
src/tests/: conftest.py  test_fill.py  test_pivot.py  utils_test.py
